# python-poetry-CI-template

./: Makefile  README.md  hello_world.py  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: makefile.yml
tests/: test_hello_world.py
