[tool.poetry]
name = "python-poetry-ci-template"
version = "0.1.0"
description = "data science project template"
authors = ["Nitin Bhushan <bhushan.nitin@posteo.net>"]
readme = "README.md"
packages = [{include = "python_poetry_ci_template"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
ipython = "^8.14.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
lint = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
